Inserido banners opcionais de esports.

--- a/Sports/Index.html
+++ b/Sports/Index.html
@@ -27,7 +27,29 @@
     </header>
 
     <section id="banner">
-        
+        <div class="container colunm">
+            <div  class="banner_headline">
+                <h1>Eu amo a adrenalina</h1>
+                <h2>Falou de aventura, esportes radicais e grandes loucuras, falou comigo!</h2>
+            </div>
+            <div class="banner_options">
+                <div class="banner1">
+                    <div class="banner-title">Motocross</div>
+                    <div class="banner-description1">Honda Racing tem prioridade de largada nas corridas finais do Brasileiro de Motocross</div>
+                    <a href="https://youtu.be/glZ7PpIl06I" target="_blank">Read more</a>
+                </div>
+                <div class="banner2">
+                    <div class="banner-title">Formula 1</div>
+                    <div class="banner-description2">Campeonato</div>
+                    <a href="https://youtu.be/b2AlmqZ_6VY" target="_blank">Read more</a>
+                </div>
+                <div class="banner3">
+                    <div class="banner-title">Futebol</div>
+                    <div class="banner-description3">Copa do Mundo</div>
+                    <a href="https://youtu.be/BhHysf87XRk" target="_blank">Read more</a>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
