Criado parte de section e artigo.

--- a/Sports/Index.html
+++ b/Sports/Index.html
@@ -51,5 +51,107 @@
             </div>
         </div>
     </section>
+    <section id="geral">
+        <div class="container">
+            <section>
+                <div class="widget_title">
+                    <div class="widget_title_tex">Latest News</div>
+                    <div class="widget_title_bar"></div>
+                </div>
+                <div class="widget_body flex">
+                   <article>
+                    <a href="">
+                        <div class="news_data">
+                            <div class="news_posted">11/11/22</div>
+                            <div class="news_comments">2</div>
+                        </div>
+                        <div class="news_thumbnail">
+                            <img src="/Sports/assets/Imagens/corrida.jpg"/>
+                        </div>
+                        <div class="news-title">
+                            Correr faz bem a saúde
+                        </div>
+                        <div class="news_resume">
+                            Libera endorfina. E esse é um dos maiores benefícios do esporte. A endorfina é liberada durante e depois da prática de exercícios físicos e é responsável por regula as emoções. Considerada um analgésico natural, a endorfina ajuda na redução do estresse e ansiedade, aliviando as nossas tensões.  Por essa razão correr melhora sua autoestima, sua confiança, é tratamento para depressão, melhora memória e raciocínio e te faz sentir feliz !
+                        </div>   
+                    </a>
+                   </article>
+                   <article>
+                    <a href="">
+                        <div class="news_data">
+                            <div class="news_posted">11/11/22</div>
+                            <div class="news_comments">2</div>
+                        </div>
+                        <div class="news_thumbnail">
+                            <img  src="/Sports/assets/Imagens/bike.jpg"/>
+                        </div>
+                        <div class="news-title">
+                            Ciclismo
+                        </div>
+                        <div class="news_resume">
+                            Libera endorfina. E esse é um dos maiores benefícios do esporte. A endorfina é liberada durante e depois da prática de exercícios físicos e é responsável por regula as emoções. Considerada um analgésico natural, a endorfina ajuda na redução do estresse e ansiedade, aliviando as nossas tensões.  Por essa razão correr melhora sua autoestima, sua confiança, é tratamento para depressão, melhora memória e raciocínio e te faz sentir feliz !
+                        </div>   
+                    </a>
+                   </article>
+                   <article>
+                    <a href="">
+                        <div class="news_data">
+                            <div class="news_posted">11/11/22</div>
+                            <div class="news_comments">2</div>
+                        </div>
+                        <div class="news_thumbnail">
+                            <img src="/Sports/assets/Imagens/cross.jpg"/>
+                        </div>
+                        <div class="news-title">
+                        Cross Fit
+                        </div>
+                        <div class="news_resume">
+                            Libera endorfina. E esse é um dos maiores benefícios do esporte. A endorfina é liberada durante e depois da prática de exercícios físicos e é responsável por regula as emoções. Considerada um analgésico natural, a endorfina ajuda na redução do estresse e ansiedade, aliviando as nossas tensões.  Por essa razão correr melhora sua autoestima, sua confiança, é tratamento para depressão, melhora memória e raciocínio e te faz sentir feliz !
+                        </div>   
+                    </a>
+                   </article>
+                   <article>
+                    <a href="">
+                        <div class="news_data">
+                            <div class="news_posted">11/11/22</div>
+                            <div class="news_comments">2</div>
+                        </div>
+                        <div class="news_thumbnail">
+                            <img src="/Sports/assets/Imagens/nataçao.jpg"/>
+                        </div>
+                        <div class="news-title">
+                            Natação
+                        </div>
+                        <div class="news_resume">
+                            Libera endorfina. E esse é um dos maiores benefícios do esporte. A endorfina é liberada durante e depois da prática de exercícios físicos e é responsável por regula as emoções. Considerada um analgésico natural, a endorfina ajuda na redução do estresse e ansiedade, aliviando as nossas tensões.  Por essa razão correr melhora sua autoestima, sua confiança, é tratamento para depressão, melhora memória e raciocínio e te faz sentir feliz !
+                        </div>   
+                    </a>
+                   </article>
+                </div>
+            </section>
+
+
+
+            <aside>
+                <div class="widget">
+                    <div class="widget_title">
+                        <div class="widget_title_tex">Departments</div>
+                        <div class="widget_title_bar"></div>
+                    </div>
+                    <div class="widget_body">
+                        ....
+                    </div>
+
+                    <div class="widget_title">
+                        <div class="widget_title_tex">Make An Appointment</div>
+                        <div class="widget_title_bar"></div>
+                    </div>
+                    <div class="widget_body">
+                        ....
+                    </div>
+                </div>
+            </aside>
+        </div>
+    </section>
 </body>
 </html>
