Configurado a area de aside e footer.

--- a/Sports/Index.html
+++ b/Sports/Index.html
@@ -130,28 +130,75 @@
                 </div>
             </section>
 
-
-
             <aside>
                 <div class="widget">
                     <div class="widget_title">
                         <div class="widget_title_tex">Departments</div>
                         <div class="widget_title_bar"></div>
                     </div>
-                    <div class="widget_body">
-                        ....
-                    </div>
-
-                    <div class="widget_title">
-                        <div class="widget_title_tex">Make An Appointment</div>
-                        <div class="widget_title_bar"></div>
-                    </div>
-                    <div class="widget_body">
-                        ....
+                    
+                    <div class="widget_body flex">
+                        <article>
+                            <img src="/Sports/assets/Imagens/fisio.jpg"/>
+                            <div class="dpFisio">
+                                Fisioterapia
+                            </div>
+                        </article>
+                        <article>
+                            <img src="/Sports/assets/Imagens/medicina.jpg"/>
+                            <div class="dpMedico">
+                               Medicina
+                            </div>
+                        </article>
+                        <article>
+                            <img src="/Sports/assets/Imagens/nutricao.jpg"/>
+                            <div class="dpNutricao">
+                               Nutrição
+                             </div>
+                        </article>
+                        <article>
+                            <img src="/Sports/assets/Imagens/personal.jpg"/>
+                            <div class="dpTreino">
+                                Treinamento
+                              </div>
+                        </article>
                     </div>
                 </div>
             </aside>
         </div>
     </section>
+
+    <footer>
+        <div class="container flexColumn">
+           
+            <div  class="footer_area">
+                <div class="footer_areaitem">
+                    <div class="widget">
+                        <div class="widget_title">
+                            <div class="widget_title_tex">Contato</div>
+                            <div class="widget_title_bar"></div>
+                        </div>
+                        <div class="widget_body">
+                          Tel: 51 994-84-1089  <a href="https://wa.me/5551994841089" target="_blank"><img src="/Sports/assets/Imagens/whatsapp.png"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer_areaitem">
+                    <div class="widget">
+                        <div class="widget_title">
+                            <div class="widget_title_tex">Portifolio</div>
+                            <div class="widget_title_bar"></div>
+                        </div>
+                        <div class="widget_body">
+                           GitHub <a href="https://github.com/Marcio-R" target="_blank"><img src="/Sports/assets/Imagens/github.png"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer_copy">
+                Copyright - Todos os direitos reservados
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
